src/index.scss
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

#root {
  height: 100vh;
}

.wrapper {
  height: 100vh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
  .dashboard {
    width: 80%;
    height: 75%;
    display: flex;
    color: #fff;
    border-radius: 7px;
    border: 1px solid #fff;
    overflow: hidden;
    .sidebar {
      width: 35%;
      height: 100%;
      position: relative;
      border-right: 1px solid rgb(26, 27, 28);
      overflow: hidden;
      background: rgb(32, 34, 35);

      .list {
        margin-top: 30px;
        padding-top: 20px;
        display: flex;
        padding-left: 20px;
        padding-right: 20px;
        flex-direction: column;
        overflow-y: scroll;
        width: auto;
        height: 100%;
        &::-webkit-scrollbar {
          width: 0 !important;
        }
        .project-bundle {
          margin-bottom: 10px;
          margin-top: 10px;
          display: flex;
          flex-direction: column;
        }
        a {
          color: white;
          text-decoration-line: none;
          width: auto;
          font-size: 0.9em;
          font-weight: 600;
          padding: 2px 4px;
          border-radius: 4px;
          &.item {
            svg {
              width: 25px;
              font-size:1.1em;
              &.inbox {
                color: rgb(0, 175, 244);
              }
              &.today {
                color: rgb(255, 211, 59);
              }
              &.upcoming {
                color: rgb(255, 52, 108);
              }
              &.anytime {
                color: rgb(45, 175, 165);
              }
              &.someday {
                color: rgb(213, 198, 146);
              }
              &.logbook {
                color: rgb(45, 189, 102);
              }
              &.trash {
                color: rgb(194, 200, 205);
              }
            }
            .title {
              margin-left: 3px;
            }
            &.thin {
              font-weight: 400;
            }
          }
          &.active {
            background: rgb(60, 63, 65);
          }
          &:active {
            background: rgb(60, 63, 65);
          }
          &.spacing {
            margin-bottom: 10px;
          }
        
        }
      }
      .actionables {
        border-top: 1px solid rgb(26, 27, 28);
        position: absolute;
        bottom: 0;
        width: 100%;
        height: 35px;
        background: rgb(32, 34, 35);
        display: flex;
        justify-content: space-between;
      }
    }
    .content-wrapper {
      height: 100%;
      width: 100%;
      background: rgb(36, 38, 39);
      overflow: hidden;

      .content {
        position: relative;
        height: 100%;

        .project {
          position: relative;
          height: 100%;
          max-height: calc(100% - 65px);
          overflow-y: scroll;
          margin-top: 30px;
          padding-left: 50px;
          padding-right: 50px;
          &::-webkit-scrollbar {
            width: 0 !important;
          }
          header {
            margin-top: 40px;
            h2 {
              font-size: 2em;
              font-weight: 500;
            }
          }
        }
        .area {
          position: relative;
          height: 100%;
          padding-left: 50px;
          padding-right: 50px;
          max-height: calc(100% - 65px);
          overflow-y: scroll;
          margin-top: 30px;
          &::-webkit-scrollbar {
            width: 0 !important;
          }
          header {
            margin-top: 40px;
            h2 {
              font-size: 2em;
              font-weight: 500;
            }
          }
        }
        .actionables {
          border-top: 1px solid rgb(26, 27, 28);
          position: absolute;
          bottom: 30px;
          width: 100%;
          height: 35px;
          background: rgb(36, 38, 39);
          display: flex;
          justify-content: space-evenly;
          align-items: center;
        }
      }
    }
  }
}

